# mcp-manager

./: .deploy.AGT1.env  .deploy.env  .env.example  .gitignore  CLAUDE.md  README.md  build.sh  docker-compose.yml  env.example  google-cloud-connected  launch.sh  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/config/: llm_providers.json
backend/mcp_manager/: cli.py  config.py  prompts.py
backend/mcp_manager/api/: app.py  deps.py  rate_limit.py
backend/mcp_manager/connectors/: __init__.py  base.py  docker_registry.py  github_pool.py  github_readme.py  glama.py  mcp_manager_instance.py  mcp_registry.py  mcp_servers_repo.py  pulsemcp.py  registry.py  skill_scanner.py  skillssh_scanner.py  token_pool.py
backend/mcp_manager/db/: models.py  session.py
backend/mcp_manager/enrichment/: canonical.py  categorizer.py  dedup.py  quality_heuristic.py  quality_llm.py  repo_checker.py  url_resolver.py
backend/mcp_manager/exporters/: base.py  engine.py
backend/mcp_manager/indexer/: chunker.py  embedder.py  pipeline.py
backend/mcp_manager/llm/: config.py  driver_docker.py  driver_ollama.py  manager.py
backend/mcp_manager/migrations/: env.py
backend/mcp_manager/summarizer/: cleaner.py  ollama_client.py  summarizer.py
backend/prompts/: skill_summary_en.md  source_summary_en.md  summarize_en.md  summarize_fr.md
backend/scripts/: generate_skill_sources_csv.py  import_skill_sources_csv.py  init.sql  scrape_skills_sh.py  seed_skill_sources.py  seed_targets.py
backend/tests/: conftest.py  test_models.py  test_prompts.py
docs/: agents.md  (+14 more)
(+211 files in other folders)
